samples/_failures_safe/1761259074_58fd75_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37839103.c:143:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  143 | enum Operation get
      |      ^~~~~~~~~
